kubernetes/prometheus/base/thanos/deployment.yaml
# https://hackernoon.com/kubernetes-monitoring-with-prometheus-and-thanos-z91w3uc2
apiVersion: apps/v1
kind: Deployment
metadata:
  name: thanos-querier
  namespace: prometheus
  labels:
    app: thanos-querier
    app.kubernetes.io/instance: prometheus
  annotations:
    checkov.io/skip1: CKV_K8S_40=OpenShift Injects Random UID
spec:
  replicas: 1
  selector:
    matchLabels:
      app: thanos-querier
  template:
    metadata:
      labels:
        app: thanos-querier
      annotations:
        enable.version-checker.io/thanos-querier: "true"
    spec:
      automountServiceAccountToken: false
      securityContext:
        seccompProfile:
          type: RuntimeDefault
        runAsNonRoot: true
      containers:
        - name: thanos-querier
          image: quay.io/thanos/thanos:v0.33.0@sha256:f7177edda27b5bc08e363187ffb093a9b7fbedbb15a2f2d0e007216cf42a9525
          securityContext:
            runAsNonRoot: true
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: true
            seccompProfile:
              type: RuntimeDefault
            capabilities:
              drop:
                - ALL
          resources:
            requests:
              cpu: 50m
              memory: 512Mi
            limits:
              cpu: 500m
              memory: 5Gi
          args:
            - query
            - --log.level=debug
            - --query.replica-label=replica
            - --store=dnssrv+thanos-prometheus-headless.prometheus.svc.cluster.local:10901
            - --store=dnssrv+thanos-store-gateway:10901
          ports:
            - name: http
              containerPort: 10902
            - name: grpc
              containerPort: 10901
          livenessProbe:
            httpGet:
              port: http
              path: /-/healthy
          readinessProbe:
            httpGet:
              port: http
              path: /-/ready
