kubernetes/prometheus/base/thanos/statefulset.yaml
# https://hackernoon.com/kubernetes-monitoring-with-prometheus-and-thanos-z91w3uc2
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: thanos-store-gateway
  namespace: prometheus
  labels:
    app: thanos-store-gateway
    app.kubernetes.io/instance: prometheus
  annotations:
    checkov.io/skip1: CKV_K8S_40=OpenShift Injects Random UID
spec:
  replicas: 1
  selector:
    matchLabels:
      app: thanos-store-gateway
  serviceName: thanos-store-gateway
  template:
    metadata:
      labels:
        app: thanos-store-gateway
        thanos-store-api: "true"
      annotations:
        enable.version-checker.io/thanos-store-gateway: "true"
    spec:
      automountServiceAccountToken: false
      securityContext:
        seccompProfile:
          type: RuntimeDefault
        runAsNonRoot: true
      containers:
        - name: thanos-store-gateway
          image: quay.io/thanos/thanos:v0.35.0@sha256:fa1d28718df00b68d6ad85d7c7d4703bd9f59e5cd8be8da6540ea398cf701a1f
          securityContext:
            runAsNonRoot: true
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: true
            seccompProfile:
              type: RuntimeDefault
            capabilities:
              drop:
                - ALL
          resources:
            requests:
              cpu: 25m
              memory: 512Mi
              ephemeral-storage: 3Gi
            limits:
              cpu: 1000m
              memory: 10Gi
              ephemeral-storage: 5Gi
          args:
            - "store"
            - "--log.level=debug"
            - "--data-dir=/data"
            - "--objstore.config-file=/etc/secret/ceph.yaml"
            - "--index-cache-size=500MB"
            - "--chunk-pool-size=500MB"
          ports:
            - name: http
              containerPort: 10902
            - name: grpc
              containerPort: 10901
          livenessProbe:
            httpGet:
              port: 10902
              path: /-/healthy
          readinessProbe:
            httpGet:
              port: 10902
              path: /-/ready
          volumeMounts:
            - name: ceph
              mountPath: /etc/secret
              readOnly: false
            - name: data
              mountPath: /data
      volumes:
        - name: ceph
          secret:
            secretName: ceph
  volumeClaimTemplates:
    - metadata:
        name: data
      spec:
        accessModes:
          - ReadWriteOnce
        resources:
          requests:
            storage: "5Gi"
        storageClassName: rook-ceph-block
