kubernetes/prometheus/base/thanos/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: thanos-querier
    app.kubernetes.io/instance: prometheus
  name: thanos-querier
  namespace: prometheus
spec:
  ports:
    - port: 9090
      protocol: TCP
      targetPort: http
      name: http
  selector:
    app: thanos-querier
---
apiVersion: v1
kind: Service
metadata:
  name: thanos-store-gateway
  namespace: prometheus
  labels:
    app.kubernetes.io/instance: prometheus
spec:
  type: ClusterIP
  clusterIP: None
  ports:
    - name: grpc
      port: 10901
      targetPort: grpc
  selector:
    thanos-store-api: "true"
---
kind: Service
apiVersion: v1
metadata:
  name: thanos-prometheus-headless
  namespace: prometheus
  labels:
    app.kubernetes.io/instance: prometheus
spec:
  clusterIP: None
  publishNotReadyAddresses: true
  type: ClusterIP
  selector:
    app: prometheus-server
  ports:
    - name: grpc
      protocol: TCP
      port: 10901
      targetPort: grpc
